--- a/README.md.old.1
+++ b/README.md.old.1
@@ -39,10 +39,10 @@
   <img src="https://github-readme-stats.vercel.app/api?username=AshimweGeoffrey&show_icons=true&theme=radical&count_private=true&include_all_commits=true" alt="GitHub Stats" />
 </p>
 
-<!--<p align="center">
+<p align="center">
   <img src="https://github-readme-streak-stats.herokuapp.com/?user=AshimweGeoffrey&theme=radical&include_all_commits=true" alt="GitHub Streak" />
 </p>
--->
+
 <p align="center">
   <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=AshimweGeoffrey&layout=compact&theme=radical&count_private=true&include_all_commits=true" alt="Top Languages" />
 </p>
@@ -50,4 +50,3 @@
 <p align="center">
   <i>Let's connect and build something amazing together!</i>
 </p>
-
